<?xml version="1.0" encoding="utf-8"?>
<!-- 申请嗨抢资格-表单填写 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray">

    <include
            layout="@layout/tenement_navitationbar"/>

    <TextView
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="15dp" android:paddingRight="20dp"
            android:text="@string/txt_express"
            android:textColor="@color/pink"/>

    <LinearLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp" android:paddingRight="20dp"
            android:background="@color/white">

        <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:paddingTop="15dp" android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:hint="@string/txt_placeholder_name"/>
        <View
                android:layout_width="fill_parent" android:layout_height="1px"
                android:background="@color/gray"/>

        <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:paddingTop="15dp" android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:inputType="phone"
                android:singleLine="true"
                android:hint="@string/txt_placeholder_phone"/>
        <View
                android:layout_width="fill_parent" android:layout_height="1px"
                android:background="@color/gray"/>

        <EditText
                android:id="@+id/paper_no"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:paddingTop="15dp" android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:hint="@string/txt_placeholder_paperno"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp" android:paddingRight="20dp"
            android:background="@color/white">

        <EditText
                android:id="@+id/self_intro"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:paddingTop="15dp" android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:gravity="top"
                android:lines="3"
                android:hint="@string/txt_placeholder_selfintro"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp" android:paddingRight="20dp"
            android:paddingTop="15dp" android:paddingBottom="10dp"
            android:background="@color/white">

        <TextView
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@color/pink"
                android:textSize="16sp"
                android:text="@string/txt_placeholder_photo"/>

        <LinearLayout
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="20dp">
            <ImageButton
                    android:layout_width="0dp" android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:src="@drawable/icon_plus"
                    android:scaleType="centerInside"
                    android:background="@color/white"/>

            <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                      android:layout_weight="3"/>

            <LinearLayout
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">
                <ImageView
                        android:layout_width="fill_parent" android:layout_height="fill_parent"
                        android:scaleType="centerInside"
                        android:src="@drawable/example_headphoto"/>

                <TextView
                        android:layout_width="fill_parent" android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="-10dp"
                        android:text="@string/txt_placeholder_photo_example"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button android:id="@+id/seckill_btn_apply"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
            android:background="@drawable/common_button_drawable"
            android:text="@string/txt_submit_apply"/>

</LinearLayout>