<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">

    <include
            layout="@layout/tenement_navitationbar"/>

    <LinearLayout
            android:layout_width="fill_parent" android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3"
            android:padding="20dp">

        <ImageView
                android:layout_width="fill_parent" android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/default_header"/>

        <TextView
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/txt_seckill_audit_title"/>

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:textColor="@color/grat"
                  android:textSize="15sp"
                  android:layout_marginTop="20dp"
                  android:lineSpacingExtra="3dp"
                  android:lineSpacingMultiplier="1.2"
                  android:text="@string/txt_seckill_audit_message"/>

        <Button
                android:id="@+id/btn_express_service_specification"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:background="@drawable/seckill_wrap_tag"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:textColor="@color/pink"
                android:text="@string/txt_express_service_specification"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="fill_parent" android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="20dp"
            style="?android:attr/buttonBarStyle">

        <View android:id="@+id/strut"
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_centerHorizontal="true"/>

        <Button
                android:layout_width="0dp" android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/seckill_wrap_tag"
                android:layout_alignRight="@+id/strut"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="15dp"
                android:layout_gravity="bottom"
                android:textColor="@color/pink"
                android:text="@string/txt_seckill_apply_revoke"/>

        <Button
                android:layout_width="0dp" android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/common_button_drawable"
                android:layout_alignLeft="@+id/strut"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="15dp"
                android:layout_gravity="bottom"
                android:textColor="@color/white"
                android:text="@string/txt_iknow"/>
    </RelativeLayout>
</LinearLayout>