<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/tenement_background">

    <include
            layout="@layout/tenement_navitationbar"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent" android:layout_height="0dp"
            android:background="@color/gray"
            android:paddingTop="30dp"
            android:paddingBottom="15dp">

        <ImageView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:src="@drawable/icon"
                android:contentDescription="@string/app_name"/>

        <TextView
                android:id="@+id/txt_appname"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:text="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_width="match_parent" android:layout_height="0dp"
            android:background="@color/white">

        <View
                android:layout_width="wrap_content" android:layout_height="1dp"
                android:background="@color/gray"/>

        <TextView
                android:id="@+id/lay_intro"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:drawableRight="@drawable/ic_action_next_item"
                android:textColor="@color/black"
                android:text="@string/main_mine_setting_about_intro"
                android:clickable="true"/>

        <View
                android:layout_width="wrap_content" android:layout_height="1dp"
                android:background="@color/gray"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent" android:layout_height="0dp"
            android:paddingTop="20dp"
            android:background="@color/gray">
        <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/main_mine_setting_about_slogan"/>

        <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/main_mine_setting_about_copyright"/>

        <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/main_mine_setting_about_copyright_en"/>
    </LinearLayout>

</LinearLayout>